--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "typo3/cms-extbase": "^11.5",
     "typo3/cms-fluid": "^11.5",
     "typo3/cms-frontend": "^11.5",
-    "parsecsv/php-parsecsv": "^1.3"
+    "parsecsv/php-parsecsv": "^1.3",
+    "google/recaptcha": "^1.2"
   },
   "require-dev": {
     "typo3/cms-backend": "^11.5",
