--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,5 +100,10 @@
       "arguments": [{ "text": "git for-each-ref --format '%(refname:short)' refs/heads | grep -v \"master\\|main\\|develop\\|stage\" | grep -v $(git branch --show-current) | xargs git branch -D\u000D" }],
       "priority": -6
     }
-  ]
+  ],
+  "[css][scss]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": "explicit"
+    }
+  }
 }
