--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "prettier": "^3.1.0"
   },
   "dependencies": {
     "recaptcha-v3": "^1.10.0"
